# ros2bag-reader

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: example.ipynb
example/recording/: metadata.yaml  recording_0.db3
ros2bag_reader/: __init__.py  ros2bag_reader.py
ros2bag_reader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rosbag2_reader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
